# mood-journal-app

./: CMakelists.txt  README.md  main.cpp
src/: CMakeLists.txt  Mood.cpp  Mood.h
